# phi

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  main.py  mkdocs.yml  pyproject.toml  skills-lock.json
.agents/skills/textual-tui/: SKILL.md
.agents/skills/textual-tui/assets/: dashboard_app.py  data_viewer.py  todo_app.py  worker_demo.py
.agents/skills/textual-tui/references/: layouts.md  styling.md  widgets.md
.claude/skills/: textual-tui
.github/workflows/: course-site.yml
docs/: README.md  architecture.md  course-design.md  deferred.md  references.md  roadmap.md
docs/course/: index.md  schedule.md  syllabus.md
docs/course/appendix/: references.md  setup.md
docs/course/chapters/: 00-orientation.md  01-model-boundary.md  02-tool-boundary.md  02-tool-round-trip.md  03-agent-loop.md  04-context-engineering.md  05-sessions.md  06-safety-approval.md  07-mcp.md  08-hooks-skills.md  09-multi-agent.md  10-events-tracing.md  11-hosts.md  12-industry-frontier.md  index.md
docs/course/prework/: index.md
docs/course/prework/async-lab/: 01-sync-baseline.md  02-coroutines.md  03-tasks.md  04-structured-concurrency.md  05-blocking.md  06-async-iteration.md  07-cancellation.md  index.md  readiness-check.md
docs/course/stylesheets/: extra.css
docs/design/: agents.md  hosts.md  mcp.md  model.md  run-loop.md  sessions-and-context.md  skills.md  tools-and-safety.md
src/phi/: __init__.py  bootstrap.py  doctor.py  instruction_discovery.py  instructions.py  settings.py
src/phi/agents/: __init__.py  definition.py  registry.py  tools.py
src/phi/cli/: __init__.py  headless.py  main.py  management.py  model_selection.py  rendering.py
src/phi/environment/: __init__.py  confined.py  protocol.py
src/phi/harness/: __init__.py  compaction.py  context.py  events.py  hooks.py  run.py  snapshots.py
src/phi/mcp/: __init__.py  client.py  config.py  tools.py  types.py
src/phi/model/: __init__.py  assembler.py  errors.py  events.py  openai_compatible.py  protocol.py  registry.py  scripted.py  types.py
src/phi/sessions/: __init__.py  entries.py  errors.py  inspection.py  metadata.py  service.py  storage.py  trace.py
src/phi/skills/: __init__.py  discovery.py  invocation.py  types.py
src/phi/tools/: __init__.py  approval.py  dispatcher.py  registry.py  types.py
src/phi/tools/builtin/: __init__.py  files.py  search.py  shell.py
src/phi/ui/: __init__.py  app.py  screens.py  widgets.py
tests/: test_app.py  test_bootstrap.py  test_cli.py  test_cli_management.py  test_cli_run.py  test_doctor.py  test_instructions.py
tests/agents/: test_agent_runtime.py
tests/evaluation/: __init__.py  runner.py  support.py  test_behavioral.py  test_runner.py  test_snapshot.py  test_validators.py  validators.py
tests/harness/: test_cancellation.py  test_context.py  test_events.py  test_failures.py  test_hooks.py  test_run.py
tests/mcp/: stdio_fixture.py  test_config.py  test_runtime.py  test_tools.py
tests/model/: test_assembler.py  test_contract.py  test_openai_compatible.py  test_registry.py  test_scripted.py
tests/sessions/: test_compaction.py  test_run_integration.py  test_service.py  test_storage.py  test_trace.py
tests/skills/: test_discovery.py  test_invocation.py
tests/tools/: test_approval.py  test_bash_builtin.py  test_dispatcher.py  test_file_builtins.py  test_search_builtins.py  test_tool_registry.py
