[project]
name = "phi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27,<2",
    "pathspec>=1.0.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0.3",
    "textual>=8.2.8",
    "typer>=0.27.0",
]

[project.scripts]
phi = "phi:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "mkdocs-material>=9.7.6,<10",
]
dev = [
    "prek>=0.4.9",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.21",
    "textual-dev>=1.8.0",
    "ty>=0.0.59",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".agents", ".claude"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --strict-markers --strict-config"
asyncio_mode = "auto"
markers = [
    "behavioral: opt-in complete-Agent evaluations against the real LiteLLM Proxy",
    "contract: opt-in tests against the real LiteLLM Proxy",
]

[tool.coverage.run]
branch = true

[tool.ty.environment]
python-version = "3.12"
root = ["./src"]
extra-paths = ["./tests"]

[tool.ty.src]
exclude = [".agents", ".claude"]
